--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/medplum/medplum.git",
+    "url": "git+https://github.com/brettjanderson/medplum-testing.git",
     "directory": "packages/core"
   },
   "license": "Apache-2.0",
