--- a/packages/expo-polyfills/package.json
+++ b/packages/expo-polyfills/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/medplum/medplum.git",
+    "url": "git+https://github.com/brettjanderson/medplum-testing.git",
     "directory": "packages/expo-polyfills"
   },
   "license": "Apache-2.0",
