--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/brettjanderson/medplum-testing.git",
+    "url": "git+https://github.com/medplum/medplum.git",
     "directory": "packages/react-hooks"
   },
   "license": "Apache-2.0",
