--- a/packages/expo-polyfills/package.json
+++ b/packages/expo-polyfills/package.json
@@ -47,7 +47,7 @@
     "text-encoding": "0.7.0"
   },
   "devDependencies": {
-    "@medplum/core": "3.0.7",
+    "@medplum/core": "git+https://github.com/brettjanderson/medplum-testing.git#brett/add-logging",
     "@types/base-64": "1.0.2",
     "@types/react": "18.2.61",
     "@types/text-encoding": "0.0.39",
@@ -59,7 +59,7 @@
     "ts-jest": "29.1.2"
   },
   "peerDependencies": {
-    "@medplum/core": "3.0.7",
+    "@medplum/core": "git+https://github.com/brettjanderson/medplum-testing.git#brett/add-logging",
     "expo": "*",
     "expo-crypto": "^12.6.0",
     "expo-secure-store": "^12.3.1",
